@@ -10,7 +10,7 @@ Architecture: {$architecture}
 Depends: $\{shlibs:Depends\}, $\{misc:Depends\}, xorg, bash,
  conflict-dep, gawk | awk, new-package | xbase-clients (>= 0.1), {$source},
  gaim (>= 0.1), emacs21, emacs22, emacs23, makedev, libtest-simple-perl (>= 0.98),
- packaging-dev, xfont-a
+ packaging-dev, xfont-a, emacs22-gtk, emacs23-el, emacs23-nox, emacs23-lucid
 Breaks: package-without-version, {$source} (<< 0.1),
  replaced-wo-version
 Replaces: replaced-wo-version
