@@ -12,6 +12,8 @@ lintian (2.5.36) UNRELEASED; urgency=medium
       smbc package.
   * checks/fields.pm:
     + [AB] Add emacs23 to list of obsolete Emacs package names.
+    + [AB] Also check for obsolete emacs package names with common
+      suffixes (-gtk, -el, -nox, lucid)
   * checks/files.desc:
     + [BR] Correct a few typos.  (Closes: #794953)
     + [BR] Rename files-privacybreach-may-use-debian-package
